[editable] XUI-1061 Border fixes after adding responsive overflow. (#4760)
* XUI-1117 React docs for Editable table.

* XUI-1061 Border fixes for narrow tables and tables without a header and/or a footer.

* XUI-1061 Code cleanup and naming updates.

* XUI-1061 Moved row delete button into separate component. Updated tests. Fixed border after merge.

* XUI-1061 Naming update and additional story.

* XUI-1061 Better spread props allocation for EditableTableCellIconButton.

* XUI-1061 Variable name update.

--- a/src/sass/7-components/_editabletable.scss
+++ b/src/sass/7-components/_editabletable.scss
@@ -5,7 +5,6 @@ $xui-editabletable-shadow-size: $xui-s-standard;
 $xui-editabletable-shadowcover-size: $xui-s-3xlarge;
 
 @mixin xui-editabletablecell {
-  border-top: $xui-border-standard;
   height: $xui-minimum-touch-target;
   padding: 0px;
 
@@ -42,6 +41,14 @@ $xui-editabletable-shadowcover-size: $xui-s-3xlarge;
   border: $xui-border-standard;
   border-radius: $xui-radius;
   overflow-x: auto;
+
+  &:not(.#{$ns}-editabletable-responsive) {
+    display: table;
+  }
+}
+
+.#{$ns}-editabletable-responsive {
+  display: grid;
 }
 
 .#{$ns}-editabletable--table {
@@ -64,12 +71,28 @@ $xui-editabletable-shadowcover-size: $xui-s-3xlarge;
   padding-right: $xui-s-standard;
 }
 
+.#{$ns}-editabletablehead {
+  .#{$ns}-editabletableheadingcell {
+    border-bottom: $xui-border-standard;
+  }
+}
+
+.#{$ns}-editabletablefoot {
+  .#{$ns}-editabletableheadingcell {
+    border-top: $xui-border-standard;
+  }
+}
+
 .#{$ns}-editabletableheadingcell-leftaligned {
   text-align: left;
 }
 
 .#{$ns}-editabletablecell {
   @include xui-editabletablecell;
+}
+
+.#{$ns}-editabletablecelliconbutton {
+  width: $xui-icon-large;
 }
 
 .#{$ns}-editabletablecellreadonly {
